// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<EditableText /> > should match snapshot as date input 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="element_resetVariants__1en4q4gd element_resetVariants_as_div__1en4q4ge element_block__1en4q4g4 sprinkles_display_inline-block_mobile__onxwju7s sprinkles_position_relative_mobile__onxwju98 EditableText_root__1iskjcs0"
    tabindex="0"
  >
    <span
      class="element_resetVariants__1en4q4gd element_resetVariants_as_span__1en4q4gm  sprinkles_textAlign_left_mobile__onxwju9o useTextStyles_root__1xnpmd70 useTextStyles_colours_primary__1xnpmd7a useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 element_resetVariants__1en4q4gd element_resetVariants_as_div__1en4q4ge element_block__1en4q4g4 sprinkles_color_primary__onxwju6l typography_typographyStyles__yhjp330 EditableText_text__1iskjcs1"
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`<EditableText /> > should match snapshot for default bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="element_resetVariants__1en4q4gd element_resetVariants_as_div__1en4q4ge element_block__1en4q4g4 sprinkles_display_inline-block_mobile__onxwju7s sprinkles_position_relative_mobile__onxwju98 EditableText_root__1iskjcs0"
    tabindex="0"
  >
    <span
      class="element_resetVariants__1en4q4gd element_resetVariants_as_span__1en4q4gm  sprinkles_textAlign_left_mobile__onxwju9o useTextStyles_root__1xnpmd70 useTextStyles_colours_primary__1xnpmd7a useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 element_resetVariants__1en4q4gd element_resetVariants_as_div__1en4q4ge element_block__1en4q4g4 sprinkles_color_primary__onxwju6l typography_typographyStyles__yhjp330 EditableText_text__1iskjcs1"
    >
      Hello World!
    </span>
  </div>
</div>
`;

exports[`<EditableText /> > should match snapshot with custom size 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="element_resetVariants__1en4q4gd element_resetVariants_as_div__1en4q4ge element_block__1en4q4g4 sprinkles_display_inline-block_mobile__onxwju7s sprinkles_position_relative_mobile__onxwju98 EditableText_root__1iskjcs0"
    tabindex="0"
  >
    <span
      class="element_resetVariants__1en4q4gd element_resetVariants_as_span__1en4q4gm  sprinkles_textAlign_left_mobile__onxwju9o useTextStyles_root__1xnpmd70 useTextStyles_colours_muted__1xnpmd7h useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_5__1xnpmd75 element_resetVariants__1en4q4gd element_resetVariants_as_div__1en4q4ge element_block__1en4q4g4 sprinkles_fontSize_5__onxwju5o sprinkles_lineHeight_5__onxwju5x sprinkles_color_muted__onxwju6s typography_typographyStyles__yhjp330 EditableText_text__1iskjcs1"
    >
      Hello World!
    </span>
  </div>
</div>
`;
